--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ db:
   image: postgres
   environment:
    - POSTGRES_HOST_AUTH_METHOD=trust
+  volumes:
+      - ./pgdata:/var/lib/postgresql/data
 
 uwsgi:
   restart: always
